--- a/that_was_easy/styles.css
+++ b/that_was_easy/styles.css
@@ -1,9 +1,24 @@
-#easy {
+#easy, #bigfoig {
+    margin-top: 40px;
+    margin-right: 50px;
+    margin-left: 50px;
     width: 300px;
     height: 300px;
-    border-radius: 150px;
+    border-radius: 120px;
     border-color: black;
-    background-color: red;
+    background-color: cyan;
     font-size: 50px;
-    color: white;
+    font-family: "Tahoma";
+    color: blue;
+}
+
+body {
+    background-color: lightgreen;
+}
+
+h1 {
+    text-align: center;
+    font-size: 60px;
+    color: rgb(49, 30, 124);
+    font-family: "Arial Black";
 }
